初始化新增对象

--- a/html/views/carManagement.html
+++ b/html/views/carManagement.html
@@ -162,6 +162,7 @@
 
     insertEvent = function() {
       $('.window-content').find('[bind-to="equipmentId"]').parents('.input-container').show();
+      TARGET_ROW_SET = {};
     };
 
     updateEvent = function(el) {
