--- a/html/views/userManagement.html
+++ b/html/views/userManagement.html
@@ -165,7 +165,7 @@
     });
 
     insertEvent = function() {
-
+      TARGET_ROW_SET = {};
     };
     updateEvent = function() {
       // 更新方法查询数据/equipmentInfo /getVehicle
