绑定工程位置，移除发包商信息

--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -35,7 +35,7 @@
               工程位置:
             </div>
             <div class="input-content">
-              <input placeholder="" type="text"/>
+              <input placeholder="engineeringLocation" type="text"/>
             </div>
           </div>
         </td>
@@ -44,16 +44,7 @@
       </tr>
       <tr>
         <td>
-          <div class="input-container" style="display: none">
-            <div class="input-label">
-              发包商名称:
-            </div>
-            <div class="input-content">
-              <input bind-to="engineeringLocation" placeholder="" type="text"/>
-            </div>
-          </div>
         </td>
-
         <td>
         </td>
         <td>
