修改错误字段

--- a/html/views/labelManagement.html
+++ b/html/views/labelManagement.html
@@ -46,40 +46,40 @@
           <td>
             <div class="input-container">
               <div class="input-label">
-                标段预估开始:
+                预估开始时间:
               </div>
               <div class="input-content">
-                <input bind-to="partPredictStart" placeholder="" type="text"/>
+                <input bind-to="partPredictStartTime" placeholder="" type="date"/>
               </div>
             </div>
           </td>
           <td>
             <div class="input-container">
               <div class="input-label">
-                标段预估结束:
+                预估结束时间:
               </div>
               <div class="input-content">
-                <input bind-to="partPredictEnd" placeholder="" type="text"/>
+                <input bind-to="partPredictEndTime" placeholder="" type="date"/>
               </div>
             </div>
           </td>
           <td>
             <div class="input-container">
               <div class="input-label">
-                标段实际开始:
+                实际开始时间:
               </div>
               <div class="input-content">
-                <input bind-to="partRealisticStart" placeholder="" type="text"/>
+                <input bind-to="partRealisticStartTime" placeholder="" type="date"/>
               </div>
             </div>
           </td>
           <td>
             <div class="input-container">
               <div class="input-label">
-                标段实际结束:
+                实际结束时间:
               </div>
               <div class="input-content">
-                <input bind-to="partRealisticEnd" placeholder="" type="text"/>
+                <input bind-to="partRealisticEndTime" placeholder="" type="date"/>
               </div>
             </div>
           </td>
@@ -134,10 +134,10 @@
             <th bind-to="engineeringId">所属工程</th>
             <th bind-to="partWidth">标段宽度</th>
             <th bind-to="partLength">标段长度</th>
-            <th bind-to="partPredictStart">标段预估开始</th>
-            <th bind-to="partPredictEnd">标段预估结束</th>
-            <th bind-to="partRealisticStart">标段实际开始</th>
-            <th bind-to="partRealisticEnd">标段实际结束</th>
+            <th bind-to="partPredictStartTime">预估开始时间</th>
+            <th bind-to="partPredictEndTime">预估结束时间</th>
+            <th bind-to="partRealisticStartTime">实际开始时间</th>
+            <th bind-to="partRealisticEndTime">实际结束时间</th>
             <th>操作</th>
           </tr>
         </thead>
