1. 车辆管理的标段修改为select下拉框 2. 标段管理时间字段修改，修改字段解析 3. 权限管理改名为角色管理

--- a/html/views/authorityManagement.html
+++ b/html/views/authorityManagement.html
@@ -2,7 +2,7 @@
   <div class="form-title">
     <div class="blue-block"></div>
     <div class="title">
-      权限管理
+      角色管理
     </div>
   </div>
   <div class="form-body">
