--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -35,7 +35,7 @@
               工程位置:
             </div>
             <div class="input-content">
-              <input placeholder="engineeringLocation" type="text"/>
+              <input bind-to="engineeringLocation" placeholder="" type="text"/>
             </div>
           </div>
         </td>
