--- a/html/views/userCenter.html
+++ b/html/views/userCenter.html
@@ -28,7 +28,7 @@
               用户角色:
             </div>
             <div class="input-content">
-              <input bind-to="ruleId" disabled placeholder="" type="text"/>
+              <input bind-to="ruleName" disabled placeholder="" type="text"/>
             </div>
           </div>
         </td>
