--- a/html/views/userManagement.html
+++ b/html/views/userManagement.html
@@ -157,7 +157,7 @@
       },
       success:function (response) {
         // 绑定表单数据
-        bindData('#userManagementTable', response, 'userId');
+        bindData('#userManagementTable', response, 'userId', true);
       },
       error: function(error) {
 
