--- a/html/views/equipmentManagement.html
+++ b/html/views/equipmentManagement.html
@@ -207,8 +207,6 @@
 
     updateEvent = function(el) {
       var equipmentId = $(el).parents('tr').attr('p-key');
-      // 更新全局TARGET
-      TARGET_ROW_SET = getTarget('equipmentId', equipmentId);
 
       // 更新方法查询数据/equipmentInfo /show
       $.ajax({
@@ -221,6 +219,7 @@
           'equipmentId': equipmentId
         },
         success:function (response) {
+          TARGET_ROW_SET = response;
           var updateForm = $('.window-content').find('.user-form');
           updateForm.find('[bind-to]').each(function() {
             var pam = $(this).attr('bind-to');
