--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -72,6 +72,7 @@
             <th bind-to="engineeringId">工程编号</th>
             <th bind-to="engineeringName">工程名称</th>
             <th bind-to="engineeringLocation" style="width: 60%;">工程位置</th>
+            <th>操作</th>
           </tr>
         </thead>
         <tbody>
@@ -133,8 +134,6 @@
 
     updateEvent = function(el) {
       var engineeringId = $(el).parents('tr').attr('p-key');
-      // 更新全局TARGET
-      TARGET_ROW_SET = getTarget('engineeringId', engineeringId);
 
       $.ajax({
         url: '/projectManagement/engineeringShow',
@@ -146,6 +145,7 @@
           'engineeringId': engineeringId
         },
         success:function (response) {
+          TARGET_ROW_SET = response;
           var updateForm = $('.window-content').find('.user-form');
           updateForm.find('[bind-to]').each(function() {
             var pam = $(this).attr('bind-to');
