--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -204,7 +204,7 @@
             "engineering": JSON.stringify([data])
           },
           success:function (response) {
-
+            $('.query').trigger('click');
           },
           error: function(error) {
 
@@ -230,7 +230,7 @@
               "engineering": JSON.stringify([data])
           },
           success:function (response) {
-
+            $('.query').trigger('click');
           },
           error: function(error) {
 
