--- a/html/views/equipmentManagement.html
+++ b/html/views/equipmentManagement.html
@@ -250,6 +250,7 @@
           }])
         },
         success:function (response) {
+          $('.query').trigger('click');
 
         },
         error: function(error) {
@@ -300,6 +301,7 @@
             "equipment": JSON.stringify([data])
           },
           success:function (response) {
+            $('.query').trigger('click');
 
           },
           error: function(error) {
@@ -326,6 +328,7 @@
             "equipment": JSON.stringify([data])
           },
           success:function (response) {
+            $('.query').trigger('click');
 
           },
           error: function(error) {
