表端 工程 设置宽度

--- a/html/views/labelManagement.html
+++ b/html/views/labelManagement.html
@@ -138,7 +138,7 @@
             <th bind-to="partPredictEndTime">预估结束时间</th>
             <th bind-to="partRealisticStartTime">实际开始时间</th>
             <th bind-to="partRealisticEndTime">实际结束时间</th>
-            <th>操作</th>
+            <th style="width: 200px">操作</th>
           </tr>
         </thead>
         <tbody>
