--- a/html/views/projectManagement.html
+++ b/html/views/projectManagement.html
@@ -72,7 +72,7 @@
             <th bind-to="engineeringId">工程编号</th>
             <th bind-to="engineeringName">工程名称</th>
             <th bind-to="engineeringLocation" style="width: 60%;">工程位置</th>
-            <th>操作</th>
+            <th style="width: 140px">操作</th>
           </tr>
         </thead>
         <tbody>
